fix cluster display after filter, fix overflow, fix autonext play on travel

--- a/Front/app/styles/ui/_map.less
+++ b/Front/app/styles/ui/_map.less
@@ -228,6 +228,7 @@
 }
 
 .player{
+	overflow: auto;
 	padding: 15px 0px;
 	height: 150px;
 	background: white;
